[gd_scene load_steps=3 format=3 uid="uid://ttj4tkieag6n"]

[ext_resource type="Script" path="res://Scenes_Scripts/UI/abilities_prompt.gd" id="1_io1qk"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_qa8k5"]

[node name="AbilitiesPrompt" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_io1qk")

[node name="AbilityNoTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 134.0
offset_top = 138.0
offset_right = 629.0
offset_bottom = 1036.0
scale = Vector2(0.758, 0.758)
texture = SubResource("CompressedTexture2D_qa8k5")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 253.0
offset_top = 848.0
offset_right = 311.0
offset_bottom = 879.0
text = "ACCEPT"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 337.0
offset_top = 848.0
offset_right = 425.0
offset_bottom = 879.0
text = "CASH OUT
"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
